--- a/blog/templates/blogs/allblogs.html
+++ b/blog/templates/blogs/allblogs.html
@@ -1,13 +1,16 @@
 
 <!doctype html>
 <html lang="en">
+
+{% load staticfiles %}
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>Shafiya Salahuddin - Blog</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -42,13 +45,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="#">Blog</a>
+        <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
       </li>
       <li class="nav-item">
       </li>
@@ -64,7 +67,7 @@
        <h2>Latest Posts</h2>
        <hr/>
        {% for blog in blogs.all %}
-         <a href=""><h3>{{blog.title}}</h3></a>
+         <a href="{% url 'detail' blog.id %}"><h3>{{blog.title}}</h3></a>
 		 {{ blog.pub_date_pretty }}
 		 <br/>
 		 <img class="img-fluid" src='{{blog.image.url}}' height=200 width=200/>
