--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,13 +1,16 @@
 
 <!doctype html>
 <html lang="en">
+
+{% load staticfiles %}
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.5">
-    <title>Album example · Bootstrap</title>
+    <title>Shafiya Salahuddin</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -42,13 +45,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
       </li>
       <li class="nav-item">
       </li>
@@ -66,6 +69,9 @@
       <p>
         <a href="mailto:shafiya.salahuddin@gmail.com" class="btn btn-primary my-2">Email Me</a>
       </p>
+	  
+	  <img src="{% static 'Me.jpg' %}">
+	  
     </div>
   </section>
 
